Add instructions for data file

--- a/discussion/ds02/ds02.html
+++ b/discussion/ds02/ds02.html
@@ -357,6 +357,8 @@ display: none;
 <h1>Preliminaries</h1>
 <ul>
 <li>This file should be in <code>STAT240/discussion/ds02</code>.</li>
+<li>The file <code>lake-monona-winters-2025.csv</code> should be in
+<code>STAT240/data</code>.</li>
 </ul>
 <p>The goal of today’s discussion will be to break R in as many ways as
 possible! We want to become comfortable with reading, understanding, and
