Fix typo in 1(c) solution

--- a/hw/hw01/hw01_solutions.html
+++ b/hw/hw01/hw01_solutions.html
@@ -401,8 +401,8 @@ element(s). </span></p>
 </ol>
 <p><span style="color:#5858d0"> This command will return 1 numeric
 element(s). </span></p>
-<pre class="r soln"><code>sum(a + c)</code></pre>
-<pre class="soln"><code>## [1] 9</code></pre>
+<pre class="r soln"><code>sum(a * c)</code></pre>
+<pre class="soln"><code>## [1] 6</code></pre>
 <ol start="4" style="list-style-type: lower-alpha">
 <li><code>a + b</code></li>
 </ol>
