--- a/hw/hw07/hwk07.html
+++ b/hw/hw07/hwk07.html
@@ -425,7 +425,8 @@ times with 10000 iterations each. Do this with <span class="math inline">\(n = 5
 10\)</span>, and <span class="math inline">\(n = 50\)</span>. Use
 <code>right_skewed</code> below as your population,
 <code>pop</code>.</p>
-<pre class="r"><code># Write your code for problem 4 here</code></pre>
+<pre class="r"><code># Write your code for problem 4 here
+right_skewed &lt;- c(rep(0, 60), rep(1, 25), rep(2, 10), rep(3, 5))</code></pre>
 <p>Then, make four histograms to compare the original population and the
 three sampling distributions. What do you notice as <span class="math inline">\(n\)</span> increases?</p>
 </div>
