--- a/discussion/ds08/ds08.html
+++ b/discussion/ds08/ds08.html
@@ -364,6 +364,12 @@ can be found on the “People” tab on Canvas.</li>
 conceptual understanding of sampling distributions and confidence
 intervals.</p>
 </div>
+<div id="final-project" class="section level1">
+<h1>Final Project</h1>
+<p>The final project, to be completed in your usual discussion groups,
+has been assigned on Canvas. Take a minute or two to exchange contact
+information and then start working on today’s problems.</p>
+</div>
 <div id="problem-1" class="section level1">
 <h1>Problem 1</h1>
 <div id="approx.-15-minutes" class="section level4">
